fix: Improve pull quote alignment

--- a/src/styles/latest.css
+++ b/src/styles/latest.css
@@ -7,7 +7,8 @@ main > .container,
   --bs-gutter-x: var(--spacing-6); /* 24px padding override (w/o sass) */
 }
 
-main > .container {
+main > .container,
+.pull-quote > .container {
   max-width: calc(800px + var(--bs-gutter-x));
 }
 
@@ -159,10 +160,6 @@ h5,
   margin: var(--spacing-7) 0;
   background-color: var(--dsdl-gray-20);
 }
-.pull-quote-content {
-  font-family: var(--dsdl-heading-font-stack);
-  font-size: var(--text-xl);
-}
 .pull-quote-content_attributed {
   margin-bottom: var(--spacing-3);
 }
@@ -205,11 +202,12 @@ h5,
 @media (min-width: 992px) {
   .pull-quote-content_attributed {
     position: relative;
+    padding-left: calc(var(--spacing-base) * 13);
   }
   .pull-quote-content_attributed::before {
     position: absolute;
     top: 0.03125em;
-    left: -15%;
+    left: var(--spacing-05);
   }
 }
 
